--- a/week7/capstone/templates/pages/home.html
+++ b/week7/capstone/templates/pages/home.html
@@ -1,6 +1,5 @@
 <head></head>
 <body>
-    <a href="'{% url 'logout' %}"><button>Logout</button></a>
+    <a href="{% url 'logout' %}"><button>Logout</button></a>
     <h1>Welcome to My Django Site</h1>
-    Hello {{ name }}
 </body>
