--- a/week7/capstone/templates/registration/signup.html
+++ b/week7/capstone/templates/registration/signup.html
@@ -2,7 +2,7 @@
 
 </head>
 <body>
-    <form class='login' method="post">
+    <form class='signup' method="post">
         <div>
             {% csrf_token %}
             {{ form.as_p }}
